--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,1 +1,14 @@
 @import './base.css';
+
+.app-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.content {
+  flex: 1;
+  margin: 20px 12%;
+  position: relative;
+  z-index: 1;
+}
