--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -32,6 +32,7 @@
 
   --color-heading: var(--vt-c-text-light-1);
   --color-text: var(--vt-c-text-light-1);
+  --color-text-dark: var(--vt-c-black);
 
   --section-gap: 160px;
 }
@@ -66,7 +67,7 @@
 .dark-theme {
   --color-background: var(--vt-c-black);
   --color-background-soft: var(--vt-c-black-soft);
-  --color-background-mute: var(--vt-c-black-mute);
+  /* --color-background-mute: var(--vt-c-black-mute); */
 
   --color-border: var(--vt-c-divider-dark-2);
   --color-border-hover: var(--vt-c-divider-dark-1);
